# Saucedemo_05

./: .gitignore  README.md  conftest.py  constants.py  index.html  pyproject.toml  pytest.ini
.github/workflows/: action.yml  black.yml  deploy.yml  static.yml
110/export/: influxDbData.txt
111/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
111/export/: influxDbData.txt  prometheusData.txt
111/history/: duration-trend.json  history-trend.json  history.json
111/widgets/: behaviors.json  categories-trend.json  duration.json  executors.json  retry-trend.json  severity.json  suites.json  summary.json
112/data/: behaviors.csv  behaviors.json  (+5 more)
Pages/: base_page.py  form_page.py  form_page_locators.py
api/: test_pet.py  test_schema.py  test_words.py
last-history/: categories-trend.json  duration-trend.json  history.json
pages/: base_page.py  cart_page.py  checkout_step_one_page.py  checkout_step_two_page.py  inventory_page.py  login_page.py  product_page.py
tests/: conftest.py  e2e.py  form_test.py  test_006_checkout.py  test_007_checkOut_page.py  test_018_01_continue.py  test_US_001_login_with_cred.py  test_US_002_inventory.py  test_US_003.py  test_US_008_checkout_page.py  test_US_015_login_page_objects_verification.py  test_cart.py  test_demo_Lena_Anton.py  test_demo_kate.py  test_e2e.py  test_inventory_page.py  test_login.py  test_login_logout.py  test_loginpage.py  test_purchase_cart.py  test_shopping_cart_page.py  test_zoya_liza.py
utilities/: BaseClass.py  logger.py  login_credentials.py  login_logout.py
(+1519 files in other folders)
