[tool.poetry]
name = "saucedemo-05"
version = "0.1.0"
description = ""
authors = ["akioikeda <principewar@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
allure-pytest = "^2.11.1"
pytest-xdist = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
